# LearnOpenGL

./: .clang-format  .gitignore  Build.bat  Build.sh  CMakeLists.txt  README.md  imgui.ini
Assets/StylizedCrateTextures/: Source.txt
Main/: BasicShape.cpp
Source/: Console.cpp  Console.h  Input.cpp  Input.h  InputKeyCodes.h  Window.cpp  Window.h
Source/Common/: Camera.cpp  Camera.h  Context.cpp  Context.h  Debug.h  Input.cpp  Input.h  InputKeyCodes.h  Model.cpp  Model.h  Utils.cpp  Utils.h  Window.cpp  Window.h
Source/Common/GraphicsDevice/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
Source/Examples/: BasicShape.cpp
Source/Examples/1_HelloTriangle/: 1_HelloTriangle.cpp
Source/Examples/2_HelloSquare/: 2_HelloSquare.cpp  Shaders.glsl  Vertex.glsl
Source/Examples/3_CubeAndBasicLighting/: 3_CubeAndBasicLighting.cpp  Fragment.glsl
Source/Examples/3_Textures/: 3_Textures.cpp  Fragment.glsl  Vertex.glsl
Source/Examples/4_BasicLighting/: 4_BasicLighting.cpp  Vertex.glsl
